# student-assignment-api/server.js
@@ -1,10 +1,15 @@
 import express from "express";
 import cors from "cors";
 import dotenv from "dotenv";
+import session from "express-session";
+import MongoStore from "connect-mongo";
+
 import { connectToDatabase } from "./config/db.js";
 import studentRoutes from "./routes/studentRoutes.js";
 import assignmentRoutes from "./routes/assignmentRoutes.js";
+import authRoutes from "./auth/authRoutes.js";
 
+import passport from "./auth/passport.js";
 import { setupSwagger } from "./swagger.js";
 
 dotenv.config();
@@ -15,8 +20,29 @@ const PORT = process.env.PORT || 8080;
 app.use(cors());
 app.use(express.json());
 
+app.use(
+    session({
+        secret: process.env.SESSION_SECRET,
+        resave: false,
+        saveUninitialized: false,
+        store: MongoStore.create({
+            mongoUrl: process.env.MONGODB_URI,
+            dbName: process.env.DB_NAME,
+            collectionName: "sessions"
+        }),
+        cookie: {
+            secure: process.env.NODE_ENV === "production",
+            httpOnly: true,
+            maxAge: 24 * 60 * 60 * 1000
+        }
+    })
+);
+app.use(passport.initialize());
+app.use(passport.session());
+
 setupSwagger(app);
 
+app.use("/auth", authRoutes);
 app.use("/students", studentRoutes);
 app.use("/assignments", assignmentRoutes);
 
